# fraud_detection_api

./: README.md
fraud_detection_api_experian/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fraud_detection_api_experian/src/: main.py
fraud_detection_api_experian/src/fraud_detection_api/: config.ini  configuration.py
fraud_detection_api_experian/src/fraud_detection_api/routes/: data_model.py  fraud_detection.py  get_structured_response.py  healthcheck.py
fraud_detection_api_experian/src/fraud_detection_api/services/: construct_input.py  get_predictions.py  utils.py
fraud_detection_api_experian/src/fraud_detection_api/training/: model_fitter.py  train_xgboost.py
fraud_detection_api_experian/tests/: conftest.py
fraud_detection_api_experian/tests/routes/: test_fraud_detection.py  test_healtcheck.py
